--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,7 +4,7 @@
           integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar navbar-light navbar-expand-lg " style="background-color: #e3f2fd;" th:fragment="header">
+<nav class="navbar navbar-light navbar-expand-lg sticky-top" style="background-color: #e3f2fd;" th:fragment="header">
     <div class="container">
         <a class="navbar-brand" href="#" th:href="@{/}">
             <img alt="" class="d-inline-block align-text-top" height="24" src="https://gb.ru/android-chrome-192x192.png"
