--- a/src/main/resources/templates/fragments/product_form.html
+++ b/src/main/resources/templates/fragments/product_form.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Add product</title>
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
           integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" rel="stylesheet">
 </head>
 <body>
-<div th:replace="~{fragments/header::header}">Header</div>
-<div class="container my-4">
+<div th:fragment="product-form">
     <form enctype="multipart/form-data" method="post" th:action="@{/product/form}" th:object="${productDTO}">
         <div class="form-row d-flex flex-sm-column justify-content-around">
             <div class="col-md-5 col-sm-12">
@@ -43,8 +39,5 @@
         </div>
     </form>
 </div>
-<div th:replace="~{fragments/footer::footer}">Footer</div>
-<script crossorigin="anonymous" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
