--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -8,30 +8,70 @@
 </head>
 <body>
 <div th:replace="~{fragments/header::header}">Header</div>
-<div class="container d-flex flex-wrap justify-content-around my-4">
-    <div class="col-2 col-md-3 col-xs-12 col-sm-6" th:each="product :${products}" th:object="${product}">
-        <div class="card" style="width: 290px;">
-            <img class="card-img-top" height="180" th:alt="*{title}" th:src="@{${product.imageLink}}" width="286">
-            <div class="card-body">
-                <h5 class="card-title" th:field="*{title}" th:text="*{title}">Card title</h5>
-                <p class="card-text" th:field="*{cost}" th:text="'Price: ' +  *{cost} + ' RUB'">Cost</p>
-                <div class="d-flex justify-content-between">
-                    <!--                    <form th:action="@{/product/form/{id}(id=${product.id})}" method="get">-->
-                    <!--                        <button type="submit" class="btn btn-outline-primary">Update</button>-->
-                    <!--                    </form>-->
-                    <a class="btn btn-outline-primary" href="#"
-                       th:href="@{/product/form/{id}(id=${product.id})}">Update</a>
-                    <form th:action="@{/product/delete}" th:method="delete">
-                        <input th:name="id" th:value="${product.id}" type="hidden">
-                        <button class="btn btn-outline-danger" type="submit">Delete</button>
-                    </form>
-                    <!--                    <a class="btn btn-outline-primary" href="#" th:href="@{/product/form/{id}(id=${product.id})}">Update</a>-->
-                    <!--                    <a class="btn btn-outline-danger" href="#" th:href="@{/product/delete}" th:value="${product.id}">Delete</a>-->
+<div class="container mb-5 mt-2">
+    <div class="row d-flex flex-wrap justify-content-around">
+        <div class="col-md-4">
+
+        </div>
+        <div class="col-md-8 d-flex flex-wrap justify-content-around">
+            <div class="row d-flex justify-content-between my-1 align-items-center">
+                <div class="col-auto" th:if="${page.getTotalPages()} > 0">
+                    <div th:replace="~{fragments/pagination::pagination}">Pagination</div>
                 </div>
+                <div class="col-auto">
+                    <form action="/product/list" th:method="get">
+                        <select class="form-select mr-sm-2" onchange="this.form.submit()" th:name="pageSize">
+                            <option th:selected="${pageSize} == 5" th:value="5">5</option>
+                            <option th:selected="${pageSize} == 10" th:value="10">10</option>
+                            <option th:selected="${pageSize} == 20" th:value="20">20</option>
+                            <option th:selected="${pageSize} == 50" th:value="50">50</option>
+                        </select>
+                    </form>
+                </div>
+            </div>
+            <div class="row m-1" th:each="product :${page.getContent()}">
+                <div class="card mb-3">
+                    <div class="row d-flex">
+                        <div class="col-md-4 col-sm-12 p-1">
+                            <img alt="..." class="img-fluid rounded-start"
+                                 th:alt="${product.title}"
+                                 th:src="@{${product.imageLink}}">
+                        </div>
+                        <div class="col-md-8 col-sm-12 py-1">
+                            <div class="card-body">
+                                <h5 class="card-title" th:field="${product.title}" th:text="${product.title}">Card
+                                    title</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Accusantium adipisci amet consequatur culpa eveniet.</p>
+                                <p class="card-title " th:field="${product.cost}"
+                                   th:text="'Price: ' +  ${product.cost} + ' RUB'">
+                                    Cost</p>
+                                <div class="d-flex justify-content-md-around justify-content-sm-around justify-content-xs-between">
+                                    <div class="col-3 col-sm-6 mr-2">
+                                        <a class="btn btn-outline-primary" href="#"
+                                           th:href="@{/product/form/{id}(id=${product.id})}">
+                                            Update
+                                        </a>
+                                    </div>
+                                    <div class="col-3 col-sm-6">
+                                        <form th:action="@{/product/delete}" th:method="delete">
+                                            <input th:name="id" th:value="${product.id}" type="hidden">
+                                            <button class="btn btn-outline-danger" type="submit">Delete</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row my-1">
+                <div th:replace="~{fragments/pagination::pagination}">Pagination</div>
             </div>
         </div>
     </div>
 </div>
+
 <div th:replace="~{fragments/footer::footer}">Footer</div>
 <script crossorigin="anonymous" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
