Add update page

--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -49,7 +49,7 @@
                                 <div class="d-flex justify-content-md-around justify-content-sm-around justify-content-xs-between">
                                     <div class="col-3 col-sm-6 mr-2">
                                         <a class="btn btn-outline-primary" href="#"
-                                           th:href="@{/product/form/{id}(id=${product.id})}">
+                                           th:href="@{/product/update/{id}(id=${product.id})}">
                                             Update
                                         </a>
                                     </div>
