--- a/src/main/resources/templates/product/add.html
+++ b/src/main/resources/templates/product/add.html
@@ -13,7 +13,39 @@
         <div class="col-md-4">
         </div>
         <div class="col-md-8">
-            <div th:replace="~{fragments/product_form::product-form}">product form</div>
+            <form enctype="multipart/form-data" method="post" th:action="@{/product/form}" th:object="${productDTO}">
+                <div class="form-row d-flex flex-sm-column justify-content-around">
+                    <div class="col-md-5 col-sm-12">
+                        <div class="form-group">
+                            <label class="form-label" for="productName">Product name</label>
+                            <input class="form-control" id="productName" placeholder="Enter product name" size="30"
+                                   th:field="*{title}" type="text">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label" for="productCategories">Choose categories</label>
+                            <select class="form-control" id="productCategories" multiple th:field="*{categoryIds}">
+                                <option th:each="c : ${categoryList}" th:text="${c.title}" th:value="${c.id}">1</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-5 col-sm-12">
+                        <div class="form-group">
+                            <label class="form-label" for="productCost">Product name</label>
+                            <input class="form-control" id="productCost" placeholder="Enter product cost" step="0.01"
+                                   th:field="*{cost}" type="number">
+                        </div>
+                        <div class="form-group">
+                            <div class="mb-3">
+                                <label class="form-label" for="formFile">Choose image</label>
+                                <input accept="image/*" class="form-control" id="formFile" name="image" type="file">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <button class="btn btn-outline-success" type="submit">Save</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
