--- a/src/main/resources/templates/product/update.html
+++ b/src/main/resources/templates/product/update.html
@@ -5,20 +5,84 @@
     <title>Update product</title>
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
           integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" rel="stylesheet">
+    <link href="/static/css/style.css" rel="stylesheet">
 </head>
 <body>
 <div th:replace="~{fragments/header::header}">Header</div>
 <div class="container my-4">
     <div class="row d-flex justify-content-between">
         <div class="col-md-4">
+            <div class="row">
+                <div class="col">
+                    <img alt="" class="img-fluid rounded-start" th:src="@{${product.imgLink}}">
+                    <div class="form-group">
+                        <div class="mb-3">
+                            <div class="field__wrapper">
+                                <input accept="image/*" class="form-control field field__file" form="data"
+                                       id="field__file-2" name="image" type="file">
+
+                                <label class="field__file-wrapper" for="field__file-2">
+                                    <div class="field__file-fake">Image not selected</div>
+                                    <div class="field__file-button">Choose</div>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="col-md-8">
-            <div th:replace="~{fragments/product_form::product-form}">product form</div>
+            <form enctype="multipart/form-data" id="data" method="post"
+                  th:action="@{/product/form}"
+                  th:object="${product}">
+                <div class="form-row">
+                    <div class="form-group">
+                        <label class="form-label" for="productName">Product name</label>
+                        <input class="form-control" id="productName" placeholder="Enter product name" size="30"
+                               th:field="*{title}" type="text">
+                    </div>
+                    <div class="form-group mt-3">
+                        <label class="form-label" for="productCategories">Select categories</label>
+                        <select class="form-control" id="productCategories" multiple th:field="*{categoryIds}">
+                            <option th:each="c : ${categoryList}" th:selected="${product.categoryIds.contains(c.id)}"
+                                    th:text="${c.title}"
+                                    th:value="${c.id}">1
+                            </option>
+                        </select>
+                    </div>
+                    <div class="form-group mt-3">
+                        <label class="form-label" for="productCost">Product name</label>
+                        <input class="form-control" id="productCost" placeholder="Enter product cost" step="0.01"
+                               th:field="*{cost}" type="number">
+                    </div>
+                </div>
+                <div class="form-row mt-5">
+                    <button class="btn btn-outline-success" type="submit">Update</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
 <div th:replace="~{fragments/footer::footer}">Footer</div>
 <script crossorigin="anonymous" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    let fields = document.querySelectorAll('.field__file');
+    Array.prototype.forEach.call(fields, function (input) {
+        let label = input.nextElementSibling,
+            labelVal = label.querySelector('.field__file-fake').innerText;
+
+        input.addEventListener('change', function (e) {
+            let countFiles = '';
+            if (this.files && this.files.length >= 1)
+                countFiles = this.files.length;
+
+            if (countFiles)
+                label.querySelector('.field__file-fake').innerText = 'Image selected';
+            else
+                label.querySelector('.field__file-fake').innerText = labelVal;
+        });
+    });
+</script>
 </body>
 </html>
