--- a/src/main/resources/templates/product/update.html
+++ b/src/main/resources/templates/product/update.html
@@ -14,7 +14,7 @@
         <div class="col-md-4">
             <div class="row">
                 <div class="col">
-                    <img alt="" class="img-fluid rounded-start" th:src="@{${product.imgLink}}">
+                    <img alt="" class="img-fluid rounded-start" th:src="@{${product.getImageLink}}">
                     <div class="form-group">
                         <div class="mb-3">
                             <div class="field__wrapper">
