--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -36,6 +36,9 @@
                     </ul>
                 </li>
             </ul>
+            <div class="cart d-flex">
+                <a th:href="@{/cart}"><img alt="cart" class="me-auto" height="30" src="/static/img/cart.png" width="30"></a>
+            </div>
         </div>
     </div>
 </nav>
