--- a/src/main/resources/templates/auth/registration.html
+++ b/src/main/resources/templates/auth/registration.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Registration</title>
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+          integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" rel="stylesheet">
 </head>
 <body>
-
+<div th:replace="~{fragments/header::header}">Header</div>
+<div class="container">
+    <div class="row d-flex mt-3 justify-content-center my-4">
+        <div class="col-md-6 col-sm-12 col-xs-12">
+            <form th:action="@{/auth/registration}" th:method="post">
+                <div class="mb-3">
+                    <input minlength="6" placeholder="Username" th:class="form-control" th:name="username" type="text">
+                </div>
+                <div class="mb-3">
+                    <input class="form-control" placeholder="example@example.com" th:name="email" type="email">
+                </div>
+                <div class="mb-3">
+                    <input class="form-control" minlength="8" placeholder="Password" th:name="password" type="password">
+                </div>
+                <div class="mb-3">
+                    <input class="form-control" maxlength="16" placeholder="Repeat password" th:name="repeatPassword"
+                           type="password">
+                </div>
+                <div class="form-row">
+                    <button class="btn btn-primary" type="submit">Sign up</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<div th:replace="~{fragments/footer::footer}">Footer</div>
+<script crossorigin="anonymous" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
