--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -47,31 +47,31 @@
                                    th:text="'Price: ' +  ${product.cost} + ' RUB'">
                                     Cost</p>
                                 <div class="d-flex justify-content-md-around justify-content-sm-around justify-content-xs-between">
-                                    <div class="col-2 col-sm-2 mr-2">
+                                    <div class="col-3 col-sm-5 mr-2" sec:authorize="hasRole('ADMIN')">
                                         <a class="btn btn-outline-primary" href="#"
                                            th:href="@{/product/update/{id}(id=${product.id})}">
                                             Update
                                         </a>
                                     </div>
-                                    <div class="col-2 col-sm-2">
+                                    <div class="col-3 col-sm-5" sec:authorize="hasRole('ADMIN')">
                                         <form th:action="@{/product/delete}" th:method="delete">
                                             <input th:name="id" th:value="${product.id}" type="hidden">
                                             <button class="btn btn-outline-danger" type="submit">Delete</button>
                                         </form>
                                     </div>
-                                    <div class="col-2 col-sm-2">
+                                    <div class="col-3 col-sm-5">
                                         <form th:action="@{/cart/add-to-cart}" th:method="get">
                                             <input th:name="id" th:value="${product.id}" type="hidden">
                                             <button class="btn btn-outline-success" type="submit">Add to Cart</button>
                                         </form>
                                     </div>
-                                    <div class="col-2 col-sm-2">
-                                        <form th:action="@{/cart/delete-from-cart}" th:method="get">
-                                            <input th:name="id" th:value="${product.id}" type="hidden">
-                                            <button class="btn btn-outline-success" type="submit">Delete From Cart
-                                            </button>
-                                        </form>
-                                    </div>
+                                    <!--                                    <div class="col-3 col-sm-5">-->
+                                    <!--                                        <form th:action="@{/cart/delete-from-cart}" th:method="get">-->
+                                    <!--                                            <input th:name="id" th:value="${product.id}" type="hidden">-->
+                                    <!--                                            <button class="btn btn-outline-success" type="submit">Delete From Cart-->
+                                    <!--                                            </button>-->
+                                    <!--                                        </form>-->
+                                    <!--                                    </div>-->
 
                                 </div>
                             </div>
