--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -8,6 +8,15 @@
 </head>
 <body>
 <div th:replace="~{fragments/header::header}">Header</div>
+<div class="container">
+    <div class="row d-flex flex-wrap mt-3">
+        <div class="col-md-8 col-sm-12 col-xs-12">
+        </div>
+        <div class="col-md-4 col-sm-12 col-xs-12" sec:authorize="isAnonymous()">
+            <a href="/login">Логин</a>
+        </div>
+    </div>
+</div>
 <div th:replace="~{fragments/footer::footer}">Footer</div>
 <script crossorigin="anonymous" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
