--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -14,11 +14,11 @@
             <form th:action="@{/login}" th:method="post">
                 <div class="mb-3">
                     <label class="form-label" for="username">Username</label>
-                    <input class="form-control" id="username" type="text">
+                    <input class="form-control" id="username" th:name="username" type="text">
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="password">Password</label>
-                    <input class="form-control" id="password" type="password">
+                    <input class="form-control" id="password" th:name="password" type="password">
                 </div>
                 <div class="form-row">
                     <button class="btn btn-primary" type="submit">Log in</button>
