--- a/src/main/resources/templates/archive/login.html
+++ b/src/main/resources/templates/archive/login.html
@@ -21,6 +21,7 @@
                     <input class="form-control" id="password" th:name="password" type="password">
                 </div>
                 <div class="form-row">
+                    <input th:name="${_csrf.parameterName}" th:value="${_csrf.token}" type="hidden"/>
                     <button class="btn btn-primary" type="submit">Log in</button>
                     <a class="btn btn-success ml-1" th:href="@{/auth/registration}">Sign up</a>
                 </div>
