--- a/src/main/resources/templates/auth/registration.html
+++ b/src/main/resources/templates/auth/registration.html
@@ -26,6 +26,7 @@
                            type="password">
                 </div>
                 <div class="form-row">
+                    <input th:name="${_csrf.parameterName}" th:value="${_csrf.token}" type="hidden"/>
                     <button class="btn btn-primary" type="submit">Sign up</button>
                 </div>
             </form>
