--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -16,7 +16,7 @@
         <div class="col-md-8 d-flex flex-wrap justify-content-around">
             <div class="row d-flex justify-content-between my-1 align-items-center">
                 <div class="col-auto" th:if="${page.getTotalPages()} > 0">
-                    <div th:replace="~{fragments/pagination::pagination}">Pagination</div>
+                    <div th:replace="~{fragments/pagination::pagination(pageName='product')}">Pagination</div>
                 </div>
                 <div class="col-auto">
                     <form action="/product/list" th:method="get">
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="row my-1">
-                <div th:replace="~{fragments/pagination::pagination}">Pagination</div>
+                <div th:replace="~{fragments/pagination::pagination('product')}">Pagination</div>
             </div>
         </div>
     </div>
