--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -13,7 +13,25 @@
         <div class="col-md-8 col-sm-12 col-xs-12">
         </div>
         <div class="col-md-4 col-sm-12 col-xs-12" sec:authorize="isAnonymous()">
-            <a href="/login">Логин</a>
+            <div class="row d-flex flex-wrap mt-3">
+                <div class="col-md-8 col-sm-12 col-xs-12">
+                    <form th:action="@{/login}" th:method="post">
+                        <div class="mb-3">
+                            <label class="form-label" for="username">Username</label>
+                            <input class="form-control" id="username" th:name="username" type="text">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label" for="password">Password</label>
+                            <input class="form-control" id="password" th:name="password" type="password">
+                        </div>
+                        <div class="form-row">
+                            <input th:name="${_csrf.parameterName}" th:value="${_csrf.token}" type="hidden"/>
+                            <button class="btn btn-primary" type="submit">Log in</button>
+                            <a class="btn btn-success ml-3" th:href="@{/auth/registration}">Sign up</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 </div>
