add user delete method

--- a/src/main/resources/templates/auth/registration.html
+++ b/src/main/resources/templates/auth/registration.html
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="row d-flex mt-3 justify-content-center my-4">
         <div class="col-md-6 col-sm-12 col-xs-12">
-            <form th:action="@{/auth/login}" th:method="post">
+            <form th:action="@{/auth/registration}" th:method="post">
                 <div class="mb-3">
                     <input minlength="6" placeholder="Username" th:class="form-control" th:name="username" type="text">
                 </div>
